<?xml version="1.0" encoding="utf-8"?>
<!--

    Copyright (C) 2014 Gimbal, Inc. All rights reserved.

    This software is the confidential and proprietary information of Gimbal, Inc.

    The following sample code illustrates various aspects of the Gimbal SDK.

    The sample code herein is provided for your convenience, and has not been
    tested or designed to work on any particular system configuration. It is
    provided AS IS and your use of this sample code, whether as provided or
    with any modification, is at your own risk. Neither Gimbal, Inc.
    nor any affiliate takes any liability nor responsibility with respect
    to the sample code, and disclaims all warranties, express and
    implied, including without limitation warranties on merchantability,
    fitness for a specified purpose, and against infringement.

-->
<resources>

    <string name="app_name">Basic Sample</string>
    <string name="app_title">Gimbal Sample App</string>
	<string name="action_enable">Enable</string>
	<string name="action_not_now">Not Now</string>
	<string name="action_privacy_policy">Privacy Policy</string>
	<string name="action_tos">Terms of Use</string>
    <string name="action_settings">Settings</string>
    <string name="action_place_monitoring">Place Monitoring</string>
    <string name="action_reset_app_instance_id">Reset App Instance ID</string>
    <string name="optin_top_text">Enable location to find</string>
    <string name="optin_bottom_text">nearby places.</string>
   
</resources>
