<?xml version="1.0" encoding="utf-8"?>
<!--

    Copyright (C) 2014 Gimbal, Inc. All rights reserved.

    This software is the confidential and proprietary information of Gimbal, Inc.

    The following sample code illustrates various aspects of the Gimbal SDK.

    The sample code herein is provided for your convenience, and has not been
    tested or designed to work on any particular system configuration. It is
    provided AS IS and your use of this sample code, whether as provided or
    with any modification, is at your own risk. Neither Gimbal, Inc.
    nor any affiliate takes any liability nor responsibility with respect
    to the sample code, and disclaims all warranties, express and
    implied, including without limitation warranties on merchantability,
    fitness for a specified purpose, and against infringement.

-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/optin_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.22"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="143dp"
            android:clickable="false"
            android:text="@string/optin_top_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/optin_bottom_text"
            android:textAppearance="?android:attr/textAppearanceLarge" 
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.22"
        android:orientation="vertical" >

        <Button
            android:id="@+id/get_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:onClick="onEnableClicked"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/action_enable"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/optin_background" />

        <Button
            android:id="@+id/not_now"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:onClick="onNotNowClicked"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/action_not_now"
            android:textColor="@color/white" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.22"
        android:background="@color/optin_background" >

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="22dp"
            android:clickable="true"
            android:onClick="onTermsOfServiceClicked"
            android:text="@string/action_tos"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="26dp"
            android:autoLink="web"
            android:clickable="true"
            android:onClick="onPrivacyPolicyClicked"
            android:text="@string/action_privacy_policy"
            android:textColor="@color/white" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.07"
        android:background="@color/optin_background" >

    </RelativeLayout>

</LinearLayout>